changed some scene

--- a/Mock Ups/index.html
+++ b/Mock Ups/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="UGC Rights - Elevate your user-generated content with AI-powered analysis and feedback">
-    <title>UGC Rights - AI-Powered Content Analysis</title>
+    <meta name="description" content="UGC Hoox - Elevate your user-generated content with AI-powered analysis and feedback">
+    <title>UGC Hoox - AI-Powered Content Analysis</title>
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/main.css">
@@ -18,7 +18,7 @@
     <header class="nav-header" id="header">
         <div class="container">
             <div class="nav-content">
-                <div class="logo">UGC Rights</div>
+                <div class="logo">UGC Hoox</div>
                 <nav class="main-nav" id="mainNav">
                     <a href="#about" class="nav-link">ABOUT US</a>
                     <a href="#how-it-works" class="nav-link">HOW IT WORKS</a>
@@ -64,59 +64,68 @@
         <section id="about" class="about-section">
             <div class="container">
                 <h2 class="section-title reveal">About Us</h2>
+                <p class="section-subtitle reveal">Transforming how creators optimize content</p>
                 <div class="about-grid">
                     <div class="about-card reveal-scale">
-                        <div class="card-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                                <polyline points="14 2 14 8 20 8"></polyline>
-                                <line x1="16" y1="13" x2="8" y2="13"></line>
-                                <line x1="16" y1="17" x2="8" y2="17"></line>
-                                <polyline points="10 9 9 9 8 9"></polyline>
-                            </svg>
+                        <div class="card-number">01</div>
+                        <div class="card-icon-wrapper">
+                            <div class="card-icon">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"></path>
+                                </svg>
+                            </div>
+                            <div class="icon-glow"></div>
                         </div>
-                        <h3 class="card-title">What is UGC Rights</h3>
+                        <h3 class="card-title">What is UGC Hoox</h3>
                         <p class="card-text">
-                            UGC Rights is an AI-powered platform designed to help content creators
-                            analyze and improve their user-generated content. We provide instant
-                            feedback on the key elements that make content engaging and effective.
+                            AI-powered content analysis that delivers <strong>instant feedback</strong> on what makes your content click.
                         </p>
+                        <div class="card-highlight">
+                            <span class="highlight-text">Smart. Fast. Effective.</span>
+                        </div>
                     </div>
                     <div class="about-card reveal-scale">
-                        <div class="card-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <circle cx="12" cy="12" r="10"></circle>
-                                <circle cx="12" cy="12" r="6"></circle>
-                                <circle cx="12" cy="12" r="2"></circle>
-                            </svg>
+                        <div class="card-number">02</div>
+                        <div class="card-icon-wrapper">
+                            <div class="card-icon">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <circle cx="12" cy="12" r="10"></circle>
+                                    <circle cx="12" cy="12" r="6"></circle>
+                                    <circle cx="12" cy="12" r="2"></circle>
+                                </svg>
+                            </div>
+                            <div class="icon-glow"></div>
                         </div>
                         <h3 class="card-title">What We Do</h3>
                         <p class="card-text">
-                            We analyze your content across four critical dimensions: Creativity,
-                            Emotional Impact, Call to Action strength, and Message Punch. Our AI
-                            provides detailed scores and personalized suggestions for improvement.
+                            Score your content on <strong>4 key dimensions</strong> with personalized improvement tips.
                         </p>
+                        <div class="card-metrics">
+                            <span class="metric">Creativity</span>
+                            <span class="metric">Emotion</span>
+                            <span class="metric">CTA</span>
+                            <span class="metric">Punch</span>
+                        </div>
                     </div>
                     <div class="about-card reveal-scale">
-                        <div class="card-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <circle cx="12" cy="12" r="5"></circle>
-                                <line x1="12" y1="1" x2="12" y2="3"></line>
-                                <line x1="12" y1="21" x2="12" y2="23"></line>
-                                <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-                                <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-                                <line x1="1" y1="12" x2="3" y2="12"></line>
-                                <line x1="21" y1="12" x2="23" y2="12"></line>
-                                <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-                                <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-                            </svg>
+                        <div class="card-number">03</div>
+                        <div class="card-icon-wrapper">
+                            <div class="card-icon">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
+                                    <path d="M2 17l10 5 10-5"></path>
+                                    <path d="M2 12l10 5 10-5"></path>
+                                </svg>
+                            </div>
+                            <div class="icon-glow"></div>
                         </div>
                         <h3 class="card-title">Why We Do It</h3>
                         <p class="card-text">
-                            We believe every content creator deserves professional-level feedback.
-                            Our mission is to democratize content optimization, making it accessible
-                            to individuals and small businesses who want to amplify their voice.
+                            <strong>Pro-level insights</strong> for every creator. No gatekeeping, just results.
                         </p>
+                        <div class="card-highlight">
+                            <span class="highlight-text">Democratizing content success.</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -137,7 +146,7 @@
                             <span class="demo-dot red"></span>
                             <span class="demo-dot yellow"></span>
                             <span class="demo-dot green"></span>
-                            <span class="demo-window-title">UGC Rights AI</span>
+                            <span class="demo-window-title">UGC Hoox AI</span>
                         </div>
                         <div class="demo-window-body">
                             <div class="demo-input-box">
@@ -265,19 +274,19 @@
             <div class="container">
                 <h2 class="section-title reveal">Frequently Asked Questions</h2>
                 <p class="section-subtitle reveal">
-                    Everything you need to know about UGC Rights
+                    Everything you need to know about UGC Hoox
                 </p>
 
                 <div class="questions-container">
                     <!-- Question 1 -->
                     <div class="question-item reveal">
                         <div class="question-header">
-                            <h3 class="question-title">What types of social media platforms does UGC Rights support?</h3>
+                            <h3 class="question-title">What types of social media platforms does UGC Hoox support?</h3>
                             <button class="toggle-icon" aria-label="Toggle answer">+</button>
                         </div>
                         <div class="question-body">
                             <p class="question-answer">
-                                UGC Rights supports all major social media platforms including Instagram,
+                                UGC Hoox supports all major social media platforms including Instagram,
                                 TikTok, YouTube, Facebook, and Twitter. Our AI is trained to analyze content
                                 optimized for each platform's unique characteristics and best practices.
                             </p>
@@ -302,13 +311,13 @@
                     <!-- Question 3 -->
                     <div class="question-item reveal">
                         <div class="question-header">
-                            <h3 class="question-title">Can I use UGC Rights for commercial purposes?</h3>
+                            <h3 class="question-title">Can I use UGC Hoox for commercial purposes?</h3>
                             <button class="toggle-icon" aria-label="Toggle answer">+</button>
                         </div>
                         <div class="question-body">
                             <p class="question-answer">
                                 Absolutely! Both Free and Premium tiers can be used for commercial content creation.
-                                Many businesses, influencers, and marketing agencies use UGC Rights to optimize
+                                Many businesses, influencers, and marketing agencies use UGC Hoox to optimize
                                 their content strategy and improve engagement.
                             </p>
                         </div>
@@ -442,7 +451,7 @@
                     </svg>
                 </a>
             </div>
-            <p class="footer-text">&copy; 2025 UGC Rights. All rights reserved.</p>
+            <p class="footer-text">&copy; 2025 UGC Hoox. All rights reserved.</p>
             <p class="footer-subtext">Empowering content creators with AI-driven insights</p>
         </div>
     </footer>
