--- a/Mock Ups/index.html
+++ b/Mock Ups/index.html
@@ -370,6 +370,7 @@
                     id="contactForm"
                     name="contact"
                     method="POST"
+                    action="/"
                     data-netlify="true"
                     netlify-honeypot="bot-field"
                 >
